--- a/challenge_2/index.html
+++ b/challenge_2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <!-- add ng-app="appTwo" to the body tag here -->
+<html ng-app="appTwo">
 <head>
   <title>Challenge 2</title>
   <meta charset="utf8" />
@@ -10,7 +10,7 @@
   <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <!-- add Angular javascript here -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
@@ -91,28 +91,28 @@ function WelcomeController(){
           I grew up in {{ welcomeCont.city || "???" }}, {{ welcomeCont.state || "??" }}
         </li>
         <li>
-          There are {{ "?" }} letters in my name
+          There are {{ welcomeCont.full_name.length }} letters in my name
         </li>
         <li>
           <!-- HINT: create a 'shout' function in your controller! -->
-          {{ welcomeCont.full_name }} in uppercase with an exclamation point is {{ welcomeCont.shout(welcomeCont.full_name) }}
+          {{ welcomeCont.full_name | uppercase }} in uppercase with an exclamation point is {{ welcomeCont.shout(welcomeCont.full_name) }}
         </li>
       </ol>
     </section>
   </div>
 
-  <div id="add-your-controller"> <!-- HINT: Wrap this exercise in a new controller -->
+  <div id="add-your-controller" data-ng-controller="ClassController as classCont"> <!-- HINT: Wrap this exercise in a new controller -->
     <section class="exercises">
       <h4>Exercise #2:</h4>
       <p>Can you create a second controller for this exercise and then dynamically fill in the blanks?</p>
       <p>Describe your WDI class:</p>
       <ol>
-        <li>Class Name: {{ "class_name" }}</li>
-        <li>Students: {{ "enrolled_students" }}</li>
-        <li>Start: {{ "start_date" }}</li>
-        <li>End: {{ "end_date" }}</li>
+        <li>Class Name: {{ classCont.class_name }}</li>
+        <li>Students: {{ classCont.enrolled_students }}</li>
+        <li>Start: {{ classCont.start_date }}</li>
+        <li>End: {{ classCont.end_date }}</li>
         <!-- HINT: Create a daysRemaining() function in your controller that calculate this -->
-        <li>Days Left: {{ "daysRemaining()" }}</li>
+        <li>Days Left: {{ classCont.daysRemaining() }}</li>
       </ol>
     </section>
   </div>
